--- a/outpaint-flux-fill-tost.ipynb
+++ b/outpaint-flux-fill-tost.ipynb
@@ -121,8 +121,8 @@
     "        \"top\": 0,\n",
     "        \"bottom\": 0,\n",
     "        \"feathering\": 24,\n",
-    "        \"positive_prompt\": \"\",\n",
-    "        \"negative_prompt\": \"\",\n",
+    "        \"positive_prompt\": \"high definition\",\n",
+    "        \"negative_prompt\": \"blurry\",\n",
     "        \"seed\": 0,\n",
     "        \"steps\": 20,\n",
     "        \"guidance\": 30,\n",
